# FCMPC

./: CMakeLists.txt  MPC_controller.cpp  README.md  package.xml  setup.sh
lib/: mpc_osqp.cc
lib/qpoases/: CMakeLists.txt
msg/: fmpc_cmd.msg  fmpc_status.msg
